objects/Account.object
<CustomObject>
    <fields>
        <fullName>ClassLevel2__c</fullName>
        <description>SR0 - This field enables to classify an account.</description>
        <label>Classification Level 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ClassLevel1__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>__</fullName>
                    <isActive>false</isActive>
                    <label>__</label>
                </value>
                <value>
                    <fullName>BL1</fullName>
                    <isActive>false</isActive>
                    <label>BL1</label>
                </value>
                <value>
                    <fullName>BM1</fullName>
                </value>
                <value>
                    <fullName>BM2</fullName>
                </value>
                <value>
                    <fullName>BM3</fullName>
                </value>
                <value>
                    <fullName>BM4</fullName>
                </value>
                <value>
                    <fullName>BM5</fullName>
                </value>
                <value>
                    <fullName>BM6</fullName>
                </value>
                <value>
                    <fullName>BM7</fullName>
                </value>
                <value>
                    <fullName>BM8</fullName>
                </value>
                <value>
                    <fullName>Building Developer</fullName>
                    <isActive>false</isActive>
                    <label>Building Developer</label>
                </value>
                <value>
                    <fullName>Business Reseller</fullName>
                    <isActive>false</isActive>
                    <label>Business Reseller</label>
                </value>
                <value>
                    <fullName>Commercial Building Developer</fullName>
                    <isActive>false</isActive>
                    <label>Commercial Building Developer</label>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                    <isActive>false</isActive>
                    <label>Consumer</label>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                    <isActive>false</isActive>
                    <label>Consumer Electronics</label>
                </value>
                <value>
                    <fullName>CT1</fullName>
                    <isActive>false</isActive>
                    <label>CT1</label>
                </value>
                <value>
                    <fullName>CT2</fullName>
                    <isActive>false</isActive>
                    <label>CT2</label>
                </value>
                <value>
                    <fullName>CT3</fullName>
                    <isActive>false</isActive>
                    <label>CT3</label>
                </value>
                <value>
                    <fullName>CT4</fullName>
                    <isActive>false</isActive>
                    <label>CT4</label>
                </value>
                <value>
                    <fullName>CT5</fullName>
                    <isActive>false</isActive>
                    <label>CT5</label>
                </value>
                <value>
                    <fullName>CT6</fullName>
                    <isActive>false</isActive>
                    <label>CT6</label>
                </value>
                <value>
                    <fullName>CT7</fullName>
                    <isActive>false</isActive>
                    <label>CT7</label>
                </value>
                <value>
                    <fullName>delete this</fullName>
                    <isActive>false</isActive>
                    <label>delete this</label>
                </value>
                <value>
                    <fullName>Design-Build Firm</fullName>
                    <isActive>false</isActive>
                    <label>Design-Build Firm</label>
                </value>
                <value>
                    <fullName>Design Firm</fullName>
                    <isActive>false</isActive>
                    <label>Design Firm</label>
                </value>
                <value>
                    <fullName>DIY Warehouse</fullName>
                    <isActive>false</isActive>
                    <label>DIY Warehouse</label>
                </value>
                <value>
                    <fullName>E14</fullName>
                    <isActive>false</isActive>
                    <label>E14</label>
                </value>
                <value>
                    <fullName>eCommerce Retailer</fullName>
                    <isActive>false</isActive>
                    <label>eCommerce Retailer</label>
                </value>
                <value>
                    <fullName>Educational Institution</fullName>
                    <isActive>false</isActive>
                    <label>Educational Institution</label>
                </value>
                <value>
                    <fullName>Electrical Consulting Engineering Firm</fullName>
                    <isActive>false</isActive>
                    <label>Electrical Consulting Engineering Firm</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SR0 - Complement to &quot;Description&quot; standard field</description>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompletedProfileStepCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tracking of PRM Registration completion of steps 5 and 6</description>
        <label>Profile Steps 5-6 Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConEmail__c</fullName>
        <description>DBA Pilot (Oct15 Rel) - This field is created to capture the Email Id of contact for a DBA Pilot account. This is used to enforce the &quot;at least one contact per digital account&quot; rule for DBA Pilot accounts.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ConFirstName__c</fullName>
        <description>DBA Pilot (Oct15 Rel) - This field is created to capture the contact name for a DBA Pilot account. This is used to enforce the &quot;at least one contact per digital account&quot; rule for DBA Pilot accounts.</description>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConLastName__c</fullName>
        <description>DBA Pilot (Oct15 Rel) - This field is created to capture the contact name for a DBA Pilot account. This is used to enforce the &quot;at least one contact per digital account&quot; rule for DBA Pilot accounts.</description>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConMobile__c</fullName>
        <description>DBA Pilot (Oct15 Rel) - This field is created to capture the Mobile of contact for a DBA Pilot account. This is used to enforce the &quot;at least one contact per digital account&quot; rule for DBA Pilot accounts.</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ConSalutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0006</fullName>
                </value>
                <value>
                    <fullName>Z001</fullName>
                </value>
                <value>
                    <fullName>Z002</fullName>
                </value>
                <value>
                    <fullName>Z003</fullName>
                </value>
                <value>
                    <fullName>Z004</fullName>
                </value>
                <value>
                    <fullName>Z005</fullName>
                </value>
                <value>
                    <fullName>Z006</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConWorkPhone__c</fullName>
        <description>DBA Pilot (Oct15 Rel) - This field is created to capture the work phone of contact for a DBA Pilot account. This is used to enforce the &quot;at least one contact per digital account&quot; rule for DBA Pilot accounts.</description>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CorporateHeadquarters__c</fullName>
        <defaultValue>false</defaultValue>
        <description>March2013</description>
        <label>Corporate Headquarters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0 - Custom field to store Country based on a reference table</description>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>SR0 - Custom to store County information</description>
        <label>County</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreateUpdateAccountMasterProfile__c</fullName>
        <formula>IF(
	OR
	(
		$Profile.Name = &quot;SE - Agent (Global - Community)&quot;,
		$Profile.Name = &quot;SE - Agent (US - Community)&quot;
	),
	HYPERLINK(&quot;/&quot;&amp;&quot;agents/apex/VFP_AccountMasterProfileRedirection?accID=&quot;+Id, 
        IF(NOT(ISBLANK(TEXT(AccountMasterProfile__c))),TEXT(AccountMasterProfile__c),&quot;Create&quot;),&quot;_top&quot;),
	
	HYPERLINK(&quot;/&quot;&amp;&quot;apex/VFP_AccountMasterProfileRedirection?accID=&quot;+Id, 
        IF(NOT(ISBLANK(TEXT(AccountMasterProfile__c))),TEXT(AccountMasterProfile__c),&quot;Create&quot;),&quot;_top&quot;)

  )</formula>
        <label>Account Master Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer360Link_L2GCustomProject__c</fullName>
        <formula>IF ( IsPersonAccount , HYPERLINK(&apos;/apex/VFP_HandleRedirect?isdtp=nv&amp;ID=&apos;+PersonContactId+&apos;&amp;field=Customer360cc&apos;,&apos;[Customer 360]&apos;, &apos;_self&apos;),
HYPERLINK(&apos;/apex/VFP_HandleRedirect?isdtp=nv&amp;ID=&apos;+Id+&apos;&amp;field=Customer360Acc&apos;,&apos;[Customer 360]&apos;, &apos;_self&apos;))</formula>
        <label>&lt;Customer360Link&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DATransliterationCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DA Transliteration Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_converted_date__c</fullName>
        <description>June 2018: To capture when a Digital Account is converted into a Business Account</description>
        <label>DA converted date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBAPilot__c</fullName>
        <description>To differentiate DBA Pilot Accounts</description>
        <formula>AND(
    RecordType.Id = $Label.CLOCT13ACC08,
    ISPICKVAL( ClassLevel1__c , &quot;SC&quot;),
    ISBLANK( Street__c ),
    ISBLANK( POBox__c )
)</formula>
        <label>DBA Pilot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBID__c</fullName>
        <description>SR0 - Read-only field supplying by MDM, Account Id provided by D&amp;B</description>
        <label>D&amp;B ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBLegalName__c</fullName>
        <description>SR0 - Read-only field supplying by MDM, Name of the account certified by D&amp;B</description>
        <label>D&amp;B Legal Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DIAS_Code__c</fullName>
        <description>A number which sequences a file in order by ultimate parent name and family sequence within each group. The DIAS Code is not permanently assigned and changes when linkage is added, deleted or changed in the D&amp;B WorldBase file.</description>
        <label>DIAS Code</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <description>Advanced I2P - Supplier Duns Number</description>
        <label>DUNS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeletionWarning__c</fullName>
        <description>SR0 - This field displays a picture to wanr user that the account is about to be deleted.</description>
        <formula>IF (  ToBeDeleted__c  , IMAGE(&quot;/resource/STR002_WarningMessageAcc&quot;,&quot;&quot; ,50,250),  &quot;&quot;)</formula>
        <label>Deletion Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Different_Account_Email_Domains__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether different Email Domains are used in all related Contacts</inlineHelpText>
        <label>Different Account Email Domains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DigitalAccount_Icon__c</fullName>
        <formula>IF($RecordType.DeveloperName==&apos;PRMAccount&apos;, IMAGE(&quot;/resource/DigitalAccount_icon&quot;,&quot;&quot;,24,24), 
IF($RecordType.DeveloperName==&apos;Customer&apos;, IMAGE(&quot;/resource/Business_Account_Icon&quot;,&quot;&quot;,24,24), 
IF($RecordType.DeveloperName==&apos;PersonAccount&apos;, IMAGE(&quot;/resource/Consumer_Account_Icon&quot;,&quot;&quot;,24,24),&quot;&quot;)))</formula>
        <label>&lt;DigitalAccount_Icon&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DirectCentralPurchasingAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Identifies account&apos;s mode of purchasing SE product. Selecting this attribute designates that the account purchases from a direct/central point. Unselecting this attribute designates that account purchases SE product locally in their country.</inlineHelpText>
        <label>Direct Central Purchasing Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DomUltimAcc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0 - Read-only field supplying by MDM</description>
        <label>Domestic Ultimate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Domestic Ultimate Accounts</relationshipLabel>
        <relationshipName>DomUltimAcc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DomesticUltimateDUNSNumber__c</fullName>
        <description>The D-U-N-SÂ® Number for the domestic ultimate, which is the highest family member in the same country as case business record as you walk up this â€˜branchâ€™ of the tree. A case may be its own domestic ultimate. May contain lead zeros which will be lost if field is treated as numeric. Use only the 9 right-most digits.</description>
        <label>Domestic Ultimate D-U-N-SÂ® Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DuplicateWith__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0 - Look-up to account object to indicate with which account an account is duplicated with.</description>
        <label>Duplicate with</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Duplicate with)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EXTFACET_Address__c</fullName>
        <formula>if(NOT(ISBLANK(PRMStreet__c)), PRMStreet__c &amp; &quot; &quot; , &quot;&quot; ) &amp;
if(NOT(ISBLANK(PRMAdditionalAddress__c )), PRMAdditionalAddress__c &amp; &quot;, &quot; , &quot; &quot; )&amp; BR() &amp;
if(NOT(ISBLANK( PRMCity__c )), PRMCity__c  &amp; &quot; &quot; , &quot; &quot; )&amp; BR() &amp;
if(NOT(ISBLANK( PRMZipCode__c )), PRMZipCode__c ,&quot; &quot;) &amp; BR() &amp; 
If(NOT(ISBLANK(  PRMStateProvince__c  )), PRMStateProvince__r.Name ,&quot; &quot;) &amp;
If(NOT(ISBLANK( PRMCountry__c )), PRMCountry__r.Name,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Profile Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTFACET_CompanyCounty__c</fullName>
        <description>Digital Account:BR-April release 2017
This field stores the information about company relates to a particular coampany</description>
        <label>county</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTFACET_CompanyPoBox__c</fullName>
        <description>Digital Account:April release 2017
This field stores the information about PO BOX at Account External Facet</description>
        <label>PO Box</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EXTFACET_MarketSegment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ID5</fullName>
                </value>
                <value>
                    <fullName>BDZ</fullName>
                </value>
                <value>
                    <fullName>IT3</fullName>
                </value>
                <value>
                    <fullName>BD9</fullName>
                </value>
                <value>
                    <fullName>EN1</fullName>
                </value>
                <value>
                    <fullName>IT2</fullName>
                </value>
                <value>
                    <fullName>ID4</fullName>
                </value>
                <value>
                    <fullName>BD4</fullName>
                </value>
                <value>
                    <fullName>BD3</fullName>
                </value>
                <value>
                    <fullName>IDZ</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>BD6</fullName>
                </value>
                <value>
                    <fullName>PW3</fullName>
                </value>
                <value>
                    <fullName>ID3</fullName>
                </value>
                <value>
                    <fullName>ID1</fullName>
                </value>
                <value>
                    <fullName>EN2</fullName>
                </value>
                <value>
                    <fullName>PW1</fullName>
                </value>
                <value>
                    <fullName>BD1</fullName>
                </value>
                <value>
                    <fullName>EN3</fullName>
                </value>
                <value>
                    <fullName>ID2</fullName>
                </value>
                <value>
                    <fullName>ID6</fullName>
                </value>
                <value>
                    <fullName>BDR</fullName>
                </value>
                <value>
                    <fullName>ID7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EXTFACET_MarketSubSegment__c</fullName>
        <label>Market Sub-Segment</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>EXTFACET_MarketSegment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B43</fullName>
                </value>
                <value>
                    <fullName>I43</fullName>
                </value>
                <value>
                    <fullName>I50</fullName>
                </value>
                <value>
                    <fullName>I51</fullName>
                </value>
                <value>
                    <fullName>E9B</fullName>
                </value>
                <value>
                    <fullName>D21</fullName>
                </value>
                <value>
                    <fullName>I46</fullName>
                </value>
                <value>
                    <fullName>E06</fullName>
                </value>
                <value>
                    <fullName>B4A</fullName>
                </value>
                <value>
                    <fullName>I4A</fullName>
                </value>
                <value>
                    <fullName>I20</fullName>
                </value>
                <value>
                    <fullName>I44</fullName>
                </value>
                <value>
                    <fullName>I42</fullName>
                </value>
                <value>
                    <fullName>B45</fullName>
                </value>
                <value>
                    <fullName>D92</fullName>
                </value>
                <value>
                    <fullName>I49</fullName>
                </value>
                <value>
                    <fullName>I40</fullName>
                </value>
                <value>
                    <fullName>E34</fullName>
                </value>
                <value>
                    <fullName>E09</fullName>
                </value>
                <value>
                    <fullName>I4F</fullName>
                </value>
                <value>
                    <fullName>I52</fullName>
                </value>
                <value>
                    <fullName>I9Y</fullName>
                </value>
                <value>
                    <fullName>I9X</fullName>
                </value>
                <value>
                    <fullName>I4C</fullName>
                </value>
                <value>
                    <fullName>E15</fullName>
                </value>
                <value>
                    <fullName>I21</fullName>
                </value>
                <value>
                    <fullName>E02</fullName>
                </value>
                <value>
                    <fullName>I3C</fullName>
                </value>
                <value>
                    <fullName>I28</fullName>
                </value>
                <value>
                    <fullName>I9A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmailAutoResponse__c</fullName>
        <inlineHelpText>This field drives the Email-to-Case auto responses / Acknowledgment sent to customers from Genesys Multimedia Solution</inlineHelpText>
        <label>E- Support Auto Response Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Email Reception and Case Creation</fullName>
                </value>
                <value>
                    <fullName>On Email Reception Only</fullName>
                </value>
                <value>
                    <fullName>On Case Creation Only</fullName>
                </value>
                <value>
                    <fullName>Do Not Send Auto-Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EmployeeSize__c</fullName>
        <inlineHelpText>Denotes the number of employees at an account site as a range, not a discrete value.</inlineHelpText>
        <label>Employee Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2 to 5</fullName>
                </value>
                <value>
                    <fullName>6 to 9</fullName>
                </value>
                <value>
                    <fullName>10 to 49</fullName>
                </value>
                <value>
                    <fullName>50 to 99</fullName>
                </value>
                <value>
                    <fullName>100 to 999</fullName>
                </value>
                <value>
                    <fullName>1,000 to 4,999</fullName>
                </value>
                <value>
                    <fullName>5,000 to 24,999</fullName>
                </value>
                <value>
                    <fullName>&gt; 25,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExportCtrlCompliance__c</fullName>
        <description>SR0 - This field indicates if business is authorized or not with current account</description>
        <label>Export Control Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A1</fullName>
                </value>
                <value>
                    <fullName>A2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalSalesResponsible__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>July2016 Release (BR-10116)</description>
        <inlineHelpText>Used to denote an External Agent who is responsible for leading the Sales relationship with the account. It is applicable only in those instances where External Agents have been deployed and have access to bFO</inlineHelpText>
        <label>External Sales Responsible</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>(1 AND 2) OR 3</booleanFilter>
            <errorMessage>Please enter external sales responsible belonging to your agency.</errorMessage>
            <filterItems>
                <field>$User.UserRoleId</field>
                <operation>equals</operation>
                <valueField>User.UserRoleId</valueField>
            </filterItems>
            <filterItems>
                <field>$User.ProfileId</field>
                <operation>equals</operation>
                <value>00e12000000bW0d</value>
            </filterItems>
            <filterItems>
                <field>$User.ProfileId</field>
                <operation>notEqual</operation>
                <value>00e12000000bW0d</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_CreatePRMProgramTeam__c</fullName>
        <description>This link will create a Fielo Team is not related yet. Otherwise, a message will be displayed.</description>
        <formula>IF( PRMAccount__c &amp;&amp; NOT(ISBLANK( PRMUIMSID__c )),
IF(ISBLANK( F_PRM_ProgramTeam__c),
HYPERLINK(&quot;/apex/FieloPRM_VFP_CreateAccountFieloTeam?id=&quot;&amp; Id, &quot;Create PRM Account Team&quot;, &quot;_self&quot;),
&quot;Account already linked to PRM Account Team&quot;
),&quot;&quot;
)</formula>
        <inlineHelpText>If the Account is not related to a PRM Account Team yet, a link will appear to create this Team. If it is already related to one, then access it though the &quot;PRM Account Team&quot; field.</inlineHelpText>
        <label>&lt;Create PRM Account Team&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_ProgramTeam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account membership in PRM programs</description>
        <inlineHelpText>Account membership in PRM programs</inlineHelpText>
        <label>PRM Account Team</label>
        <referenceTo>FieloCH__Team__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FaxInternational__c</fullName>
        <description>Populated by SDH. Will contain Account.Fax info in International Format</description>
        <label>Fax International</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FaxNational__c</fullName>
        <description>Populated by SDH. Will contain Account.Fax info in National Format</description>
        <label>Fax National</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FieloEE__Number_of_Contacts__c</fullName>
        <label>Number of Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <description>Stores the Latitude &amp; Longitude of the location</description>
        <label>Manual Geo Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>GlobUltiAcc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0 - Read-only field supplying by MDM</description>
        <label>Global Ultimate Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Global Ultimate Accounts</relationshipLabel>
        <relationshipName>GlobalUltimateAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalAccount__c</fullName>
        <description>SR0 - This field displays an image to graphically identify a Global Account.</description>
        <formula>IF( ISPICKVAL( Type ,&quot;GSA&quot;) , IMAGE(&quot;/resource/I2P_GSALogo&quot;,&quot;GSA&quot;), &quot;&quot;)</formula>
        <label>&lt;GSAImage&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GlobalFieldServiceSPOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BR-9802 Q3-2016 Release, Field to be used to provide VIP Specific Information.</description>
        <inlineHelpText>Provides support for Service-related issues at global level. Ensures best operation/execution. Oversees global recalls and associated action plans for assets or solutions installed in different countries. Participates on Customer Steering Committees.</inlineHelpText>
        <label>Global Field Service SPOC</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only select a standard user</errorMessage>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>GlobalFieldServiceSPOC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GlobalUltimateDUNSNumber__c</fullName>
        <description>The D-U-N-SÂ® number of the highest parent of a corporate family. Global ultimate records carry their own case D-U-N-SÂ® number in this field so that a common sort and/or match area is available for all family members. 
May contain lead zeros which will be lost if field is treated as numeric. Use only the 9 right-most digits.</description>
        <label>Global Ultimate D-U-N-SÂ® Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleMaps__c</fullName>
        <description>SR0 - Formula in order to make available a google maps link in anywhere else than in custom links section</description>
        <formula>HYPERLINK($Label.CL10070 &amp; &quot;?Id=&quot; &amp; Id &amp; &quot;&amp;sobject=Account&quot;, &quot;Google Maps&quot;, &quot;_blank&quot;)</formula>
        <label>-</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoogleNews__c</fullName>
        <description>SR0 - Formula in order to make available a google news link in anywhere else than in custom links section</description>
        <formula>HYPERLINK(&quot;http://www.google.com/news?&amp;q=&quot; &amp;  Name &amp; &quot;&amp;btnG=Search+News&quot; , &quot;Google News&quot;)</formula>
        <label>-</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQDUNSNumber__c</fullName>
        <description>The D-U-N-SÂ® number of the Parent/Headquarter organization. 
May contain lead zeros which will be lost if field is treated as numeric. Use only the 9 right-most digits.</description>
        <label>Headquarter/Parent D-U-N-SÂ® Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQParentAcc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SR0 - Read-only field supplying by MDM</description>
        <label>Headquarter/ Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Headquarter/ Parent Account</relationshipLabel>
        <relationshipName>HQParentAcc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasAccountPlan__c</fullName>
        <description>November2012</description>
        <formula>IF( NbrofAccountPlans__c &gt;0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Account Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasActiveAccountPlan__c</fullName>
        <description>technical field needed for reports.
With = 1 
Without = 0</description>
        <formula>IF( NbrofActiveAccountPlans__c &gt;0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Active Account Plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HasPlatformingScoring__c</fullName>
        <description>technical field for reports</description>
        <formula>IF( NbrofPlatformingScoring__c&gt;0, 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Platforming Scoring</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>